<resources>
    <string name="app_name">눈송마켓</string>
    // BottomnavigationView
    <string name="bottom_nav_tap_home">홈</string>
    <string name="bottom_nav_tap_post">등록</string>
    <string name="bottom_nav_tap_chatting">채팅</string>
    <string name="bottom_nav_tap_mypage">내 정보</string>

    // HomeFragment
    <string name="recent_article_list_title">최근 게시글</string>

    // PublishActivity
    <string name="publish_activity_title">상품 등록</string>
    <string name="publish_activity_title_hint">상품명을 입력해 주세요.</string>
    <string name="publish_activity_category_hint">카테고리를 선택해주세요</string>
    <string name="publish_activity_price_hint">판매 가격을 입력해 주세요.</string>
    <string name="publish_activity_discription_hint">상품 설명을 입력해 주세요.\n상품 정보를 상세하게 입력하실수록\n수월하게 거래할 수 있습니다.\n\n\n</string>
    <string name="publish_activity_publish_btn">등록완료</string>
    <string name="publish_activity_edit_btn">수정하기</string>

    // MessageFragment
    <string name="message_fragment_title">채팅</string>

    //MyPageFragment
    <string name="my_page_fragment_title">내 정보</string>
    <string name="my_article">내가 쓴 글</string>
    <string name="my_promise">내 약속</string>
    <string name="google_logout">로그 아웃</string>
    <string name="google_delete_account">계정 탈퇴</string>
    <string name="copyright">Copyright © 2022 Chungpacoder All rights reserved.</string>

    // SearchActivity
    <string name="preference_file_key">keyword_list</string>
    <string name="search_activity_edit_text_hint">상품을 검색해보세요</string>
    <string name="search_activity_recent_search_tv">최근 검색어</string>
    <string name="search_activity_delete_all_tv">모두 지우기</string>

    // ChattingActivity
    <string name="chatting_activity_msg_edt_hint">메세지를 보내보세요</string>


    // PromiseActivity
    <string name="promise_activity_title">약속 보내기</string>
    <string name="promise_activity_date_hint">약속 날짜를 입력해 주세요.</string>
    <string name="promise_activity_time_hint">약속 시간을 입력해 주세요.</string>
    <string name="promise_activity_location_hint">약속 장소을 입력해 주세요.</string>
    <string name="promise_activity_memo_hint">약속을 위해 필요한 메모를 입력해 주세요.</string>
    <string name="promise_activity_publish_btn">보내기</string>


</resources>