<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/page_home"
        android:enabled="true"
        android:icon="@drawable/ic_home_24"
        android:title="@string/bottom_nav_tap_home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/page_post"
        android:enabled="true"
        android:icon="@drawable/ic_add_24"
        android:title="@string/bottom_nav_tap_post"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/page_chatting"
        android:enabled="true"
        android:icon="@drawable/ic_chat_24"
        android:title="@string/bottom_nav_tap_chatting"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/page_mypage"
        android:enabled="true"
        android:icon="@drawable/ic_mypage_24"
        android:title="@string/bottom_nav_tap_mypage"
        app:showAsAction="ifRoom" />
</menu>