<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity">

    <ImageButton
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingStart="14dp"
        android:paddingTop="22dp"
        android:paddingBottom="2sp"
        android:src="@drawable/ic_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/search_etv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="14dp"
        android:background="@drawable/background_searching_box"
        android:ems="10"
        android:lines="1"
        android:ellipsize="end"
        android:hint="@string/search_activity_edit_text_hint"
        android:paddingStart="14dp"
        android:paddingTop="6dp"
        android:paddingEnd="40dp"
        android:paddingBottom="6dp"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/back_btn"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/search_ibtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:src="@drawable/ic_search_24"
        app:layout_constraintBottom_toBottomOf="@id/search_etv"
        app:layout_constraintEnd_toEndOf="@id/search_etv"
        app:layout_constraintTop_toTopOf="@id/search_etv"
        app:tint="@color/dark_gray" />

    <TextView
        android:id="@+id/recent_search_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/search_activity_recent_search_tv"
        android:textColor="@color/dark_gray"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_etv" />

    <TextView
        android:id="@+id/delete_all_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/search_activity_delete_all_tv"
        android:textColor="@color/gray"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_etv" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recent_keyword_rcv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:paddingStart="2dp"
        android:paddingEnd="2dp"
        app:layout_constraintEnd_toEndOf="@id/delete_all_tv"
        app:layout_constraintStart_toStartOf="@id/recent_search_tv"
        app:layout_constraintTop_toBottomOf="@id/recent_search_tv"
        tools:listitem="@layout/item_search_word" />

</androidx.constraintlayout.widget.ConstraintLayout>